\name{RTN-News}
\title{RTN News}
\encoding{UTF-8}

\section{Version 1.0.0}{
  \itemize{
    \item 1st Bioconductor release of RTNsurvival [2017-03-01].
  }
}