@@ -1,10 +1,10 @@
 Package: RTNsurvival
 Type: Package
 Title: Survival analysis using transcriptional networks inferred by the RTN package
-Version: 1.7.0
+Version: 1.7.1
 Author: Clarice S. Groeneveld, Vinicius S. Chagas, Mauro A. A. Castro
 Maintainer: Clarice Groeneveld <clari.groeneveld@gmail.com>, Mauro A. A. Castro <mauro.a.castro@gmail.com>
-Depends: R(>= 3.5), RTN(>= 2.4.5), RTNduals(>= 1.4.4), methods
+Depends: R(>= 3.5), RTN, RTNduals, methods
 Imports: survival, RColorBrewer, grDevices, graphics, stats, utils, viper, scales
 Suggests: Fletcher2013b, pheatmap, knitr, rmarkdown, BiocStyle, RUnit, BiocGenerics
 Description: RTNsurvival is a tool for integrating regulons generated by the RTN package with survival information. For a given regulon, the 2-tailed GSEA approach computes a differential Enrichment Score (dES) for each individual sample, and the dES distribution of all samples is then used to assess the survival statistics for the cohort. There are two main survival analysis workflows: a Cox Proportional Hazards approach used to model regulons as predictors of survival time, and a Kaplan-Meier analysis assessing the stratification of a cohort based on the regulon activity. All plots can be fine-tuned to the user's specifications.
@@ -13,4 +13,4 @@ biocViews: NetworkEnrichment, Survival, GeneRegulation, GeneSetEnrichment, Netwo
 LazyData: TRUE
 VignetteBuilder: knitr
 Encoding: UTF-8
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
