@@ -18,7 +18,6 @@ exportMethods(tnsPlotKM)
 exportMethods(tnsPlotKmInteraction)
 import(methods)
 importClassesFrom(RTN,TNI)
-importClassesFrom(RTNduals,MBR)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RTN,tna.gsea2)
 importFrom(RTN,tna.plot.gsea2)
@@ -27,7 +26,6 @@ importFrom(RTN,tni.get)
 importFrom(RTN,tni.gsea2)
 importFrom(RTN,tni2tna.preprocess)
 importFrom(RTN,upgradeTNI)
-importFrom(RTNduals,mbrGet)
 importFrom(RTNduals,mbrPlotInteraction)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
@@ -58,6 +56,7 @@ importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,survdiff)
 importFrom(survival,survfit)
+importFrom(utils,combn)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(viper,aREA)
